# OutfitSystem

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: plugintarget.cmake
src/: OutfitSystem.cpp
